# RoboDriver

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README_en.md  README_ja.md  README_zh.md  pyproject.toml  setup.py
components/cameras/dora-camera-orbbec-v1/: pyproject.toml
components/cameras/dora-camera-orbbec-v1/examples/: view.yml
components/simulations/dora-sim-genesis-franka-grasp-cube/: pyproject.toml
components/simulations/dora-sim-genesis-franka-grasp-cube/src/: keyboard_controller.py  main.py
descriptions/agilex_aloha/: aloha.xml  piper_left.xml  piper_right.xml  scene.xml
descriptions/agilex_piper/: piper.xml  scene.xml
operating_platform/core/: _main.py  _main_bc.py  coordinator.py  daemon.py  monitor.py  record.py  recorder.py  replay.py  replayer.py
operating_platform/dataset/: compute_stats.py  (+3 more)
operating_platform/robot/robots/so101_aio_dora/: pyproject.toml
robodriver/: __init__.py  __version__.py
robodriver/components/arm_normal_so101_v1/: dora_calibrate_follower.yml  dora_calibrate_leader.yml  dora_read_arm_leader.yml  dora_teleoperate_arm.yml  keybord.py  pyproject.toml
robodriver/components/arm_normal_so101_v1/.calibration/: SO101-leader.json
robodriver/components/arm_normal_so101_v1/motors/: calibration_gui.py
robodriver/components/camera_rgbd_realsense/: plot.py  pyproject.toml  test_camera_realsense.yml
robodriver/components/dora-rerun/: Cargo.toml
robodriver/components/dora-rerun/src/: lib.rs
robodriver/components/legacy/arm_normal_piper_v2/: main.py  pyproject.toml  test_arm.yml
robodriver/components/legacy/gripper_pika/: dora_gripper_pika_dual.yml  pyproject.toml  test_gripper_pika.yml
robodriver/components/legacy/gripper_pika/dr_gripper_pika/: plot.py
robodriver/components/legacy/tracker_6d_vive/: dora_vive_dual.yml  dora_vive_multi.yml  dora_vive_single.yml  dora_vive_single_uv.yml  dora_vive_sn.yml  pyproject.toml
robodriver/components/legacy/tracker_6d_vive/dr_tracker_vive/: node_link.py  pa_schema.py  print.py  sn.py
robodriver/robots/robodriver-robot-a2d-aio-ros2/: README.md  README_en.md  pyproject.toml
robodriver/robots/robodriver-robot-a2d-aio-ros2/lerobot_robot_a2d_aio_ros2/: __init__.py
robodriver/robots/robodriver-robot-a2d-aio-ros2/robodriver_robot_a2d_aio_ros2/: __init__.py  camera_debug.py  config.py  debug.py  node.py  robot.py
robodriver/robots/robodriver-robot-agilex-aloha-aio-dora/: README.md  pyproject.toml
robodriver/robots/robodriver-robot-agilex-aloha-aio-dora/dora/: dataflow_realsense.yml
robodriver/robots/robodriver-robot-agilex-aloha-aio-dora/robodriver_robot_agilex_aloha_aio_dora/: config.py  node.py  robot.py
robodriver/robots/robodriver-robot-agilex-aloha-aio-dora/scripts/: can_muti_activate.sh
robodriver/robots/robodriver-robot-agilex-aloha-eepose-ros2/: README.md  README_en.md  pyproject.toml
robodriver/robots/robodriver-robot-agilex-aloha-eepose-ros2/lerobot_robot_agilex_aloha_eepose_ros2/: __init__.py
robodriver/robots/robodriver-robot-agilex-aloha-eepose-ros2/robodriver_robot_agilex_aloha_eepose_ros2/: __init__.py  calibrate.py  config.py  node.py  robot.py
robodriver/robots/robodriver-robot-agilex-aloha-eepose-ros2/scripts/: find_can_port.sh  install_udev_rules.sh
robodriver/robots/robodriver-robot-dobot-nova2-ros2/: README.md  pyproject.toml
robodriver/robots/robodriver-robot-dobot-nova2-ros2/lerobot_robot_dobot_nova2_ros2/: __init__.py
robodriver/robots/robodriver-robot-dobot-nova2-ros2/robodriver_robot_dobot_nova2_ros2/: __init__.py  config.py  node.py  robot.py  status.py
robodriver/robots/robodriver-robot-galaxea-lite-eepose-ros2/: .gitignore  README-EN.md  pyproject.toml
robodriver/robots/robodriver-robot-galaxea-lite-eepose-ros2/lerobot_robot_galaxea_lite_eepose_ros2/: __init__.py
robodriver/robots/robodriver-robot-galaxea-lite-eepose-ros2/robodriver_robot_galaxea_lite_eepose_ros2/: __init__.py  config.py  node.py  robot.py  status.py
robodriver/robots/robodriver-robot-leju-kuavo-teleoperate-ros1/: README.md  pyproject.toml
robodriver/robots/robodriver-robot-leju-kuavo-teleoperate-ros1/lerobot_robot_leju_kuavo_teleoperate_ros1/: __init__.py
robodriver/robots/robodriver-robot-leju-kuavo-teleoperate-ros1/robodriver_robot_leju_kuavo_teleop_ros1/: __init__.py  config.py  node.py  robot.py  status.py
robodriver/robots/robodriver-robot-leju-kuavo-teleoperate-ros1/robodriver_robot_leju_kuavo_teleop_ros1/test/: dexhand_state.py  kuavo_arm_traj.py  robotHeadPosition.py  sensors_data_raw.py
robodriver/robots/robodriver-robot-leju-kuavo-teleoperate-ros2/: pyproject.toml
robodriver/robots/robodriver-robot-leju-kuavo-teleoperate-ros2/lerobot_robot_leju_kuavo_teleoperate_ros2/: __init__.py
robodriver/robots/robodriver-robot-leju-kuavo-teleoperate-ros2/robodriver_robot_leju_kuavo_teleop_ros2/: __init__.py  config.py  node.py  robot.py  status.py
robodriver/robots/robodriver-robot-realman-aio-ros1/: README.md  pyproject.toml  ros1_to_zmq.py
robodriver/robots/robodriver-robot-realman-aio-ros1/lerobot_robot_realman_aio_ros1_ros/: __init__.py
robodriver/robots/robodriver-robot-realman-aio-ros1/robodriver_robot_realman_aio_ros1/: __init__.py  config.py  node.py  robot.py
robodriver/robots/so101_follower_dora/: .gitignore  .gitmodules  README.md  pyproject.toml
robodriver/robots/so101_follower_dora/dora/: dataflow.yml
robodriver/robots/so101_follower_dora/so101_follower_dora/: __init__.py  config.py  node.py  robot.py  status.py
robodriver/teleoperators/robodriver-teleoperator-keyboard/: .gitignore  LICENSE  pyproject.toml
robodriver/teleoperators/robodriver-teleoperator-keyboard/lerobot_teleoperator_keyboard/: __init__.py
robodriver/teleoperators/robodriver-teleoperator-keyboard/robodriver_teleoperator_keyboard/: config.py  node.py  teleoperator.py
scripts/: record.sh  replay.sh  visual.sh  visual_html.sh
test/piper/: _docker_can_muti_activate.sh  arm_ctrl.py  find_all_can_port.sh  print_joint.py  pyproject.toml
test/piper/urdf/: _piper_left_pred.urdf  _piper_right_pred.urdf  piper_right.urdf
(+353 files in other folders)
