[build-system]
requires = ["uv>=0.1.0", "setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RoboDriver"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    { name = "Xiang Yang", email = "ryu-yang@qq.com" }
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "opencv-python",
    "lerobot>=0.4.0",
    "logging_mp",

    "sounddevice",
    "soundfile",

    "rerun-sdk==0.26.0",

    "python-socketio"

]

[tool.setuptools.packages.find]
where = ["."]
include = ["robodriver"]
