[build-system]
requires = ["uv>=0.1.0", "setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RoboDriver"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    { name = "Xiang Yang", email = "ryu-yang@qq.com" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch>=2.7.1",
    "lerobot>=0.4.0",
    # "genesis-world",
    "mujoco",

    "logging_mp",
    "python-socketio",

    "sounddevice",
    "soundfile",

    "rerun-sdk==0.26.2",
]

[project.optional-dependencies]

[project.scripts]
robodriver-run="robodriver.scripts.run:main"
robodriver-visual="robodriver.scripts.visual:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["robodriver*"]
exclude = []
