[project]
name = "dr-piper-view-rerun"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiang Yang",email = "ryu-yang@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dora-rs-cli (>=0.3.11,<0.4.0)",
    "piper_sdk >= 0.0.8",
    "dora-rerun",
    "rerun-sdk==0.23.3",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
