[build-system]
requires = ["uv>=0.1.0", "setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dora_camera_orbbec_v1"
version = "0.0.1"
description = ""
authors = [
    {name = "Xiang Yang",email = "ryu-yang@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dora-rs (>=0.3.11,<0.4.0)",
    "sb-pyorbbecsdk",
    "opencv-python",
    "numpy (<2.0)"
]

[project.optional-dependencies]
view = [
    "dora-rs-cli",
    "opencv-plot",
]

[project.scripts]
dora-camera-orbbec-v1 = "dora_camera_orbbec_v1.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dora_camera_orbbec_v1"]
exclude = []
