[build-system]
requires = ["uv>=0.1.0", "setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dora-sim-genesis-franka-grasp-cube"
version = "0.0.3"
description = ""
authors = [
    {name = "Xiang Yang", email = "ryu-yang@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dora-rs-cli (>=0.3.11,<0.4.0)",
    "genesis-world>=0.3.7",
    "torch",
    "pynput",
    "dora-rerun",
]

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
view = [
    "dora-rs-cli",
    "dora-rerun",
]

[project.scripts]
dora-sim-genesis-franka-grasp-cube = "src.main:main"
