[project]
name = "dr-camera-realsense"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiang Yang",email = "ryu-yang@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dora-rs-cli (>=0.3.11,<0.4.0)",
    "opencv-python (>= 4.1.1)",
    "pyrealsense2"
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
