[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver_robot_a2d_aio_ros2"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["robotics", "lerobot", "a2d_aio_ros2"]

dependencies = [
    "logging_mp",

    "numpy",
    "pyzmq",
    "opencv-python",
    "cv_bridge",
]

[tool.setuptools.packages.find]
include = [
    "robodriver_robot_a2d_aio_ros2",
    "lerobot_robot_a2d_aio_ros2"
]
