[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver-robot-agilex-aloha-eepose-ros2"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Xiang Yang", email = "yangxiang@baai.ac.cn"},
]
keywords = ["robotics", "lerobot", "agilex", "aloha"]
dependencies = [
    "logging_mp",
    "opencv-python",
]

[tool.setuptools.packages.find]
include = [
    "robodriver_robot_agilex_aloha_eepose_ros2",
    "lerobot_robot_agilex_aloha_eepose_ros2"
]
