[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver_robot_dobot_nova2_ros2"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "wangqi", email = "wangqi10@inspur.com"},
]
keywords = ["robotics", "lerobot", "galaxea"]
dependencies = [
    "dora-rs-cli",
    "logging_mp",
    "opencv-python",
]

[tool.setuptools.packages.find]
include = [
    "robodriver_robot_dobot_nova2_ros2",
    "lerobot_robot_dobot_nova2_ros2"
]
