[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver_robot_so101_follower_dora"
version = "0.1.0"
description = "LeRobot so101 bimanual integration package"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache License 2.0"
authors = [
    {name = "Xiang Yang", email = "yangxiang@baai.ac.cn"},
]
keywords = ["robotics", "lerobot", "so101"]
dependencies = []

[tool.setuptools.packages.find]
include = ["so101_follower_dora"]
