[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver_robot_so101_aio_doara"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Xiang Yang", email = "yangxiang@baai.ac.cn"},
]
keywords = ["robotics", "lerobot", "so101"]
dependencies = [
    "dora-rs-cli",
    "lerobot",
]

[tool.setuptools.packages.find]
include = ["so101_aio_dora"]
