[project]
name = "dr-component-gripper-pika"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiang Yang",email = "ryu-yang@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dora-rs-cli (>=0.3.11,<0.4.0)",
    "pysurvive",
    "agx-pypika"
]

[tool.setuptools]
packages = ["dr_gripper_pika"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
